# debate-research-graph

./: .env.example  README.md  flowchart.mmd  pyproject.toml  requirements.txt
outputs/: debate_20260404_222057.md  debate_20260404_231903.md  debate_20260404_233035.md  debate_20260405_101526.md  debate_20260405_121049.md  debate_20260405_124321.md  debate_20260405_125815.md  debate_20260405_130632.md  debate_20260405_130756.md  debate_20260405_131336.md
scripts/: fetch_url_format.py  test_openai_connectivity.py
src/deep_research/: __init__.py  cli.py  graph.py  search.py  state.py
tests/: test_graph.py
